@@ -15,6 +15,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+utils/mapper.c: new parameter, -listunusedmaps, that'll generate a maps.unused file.
+Nicolas Weeger 2007-05-07
+
 server/plugins.c: fix plugin unloading which didn't call the closePlugin function.
 server/c_wiz.c: document.
 Nicolas Weeger 2007-05-07
